FINERACT-XXXX: Update spring