@@ -32,14 +32,16 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.fineract.batch.domain.BatchRequest;
 import org.apache.fineract.batch.domain.BatchResponse;
 import org.apache.fineract.portfolio.loanaccount.api.LoanChargesApiResource;
-import org.apache.http.HttpStatus;
+import org.apache.hc.core5.http.HttpStatus;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
  * Test class for {@link AdjustChargeByChargeExternalIdCommandStrategy}.
  */
+@ExtendWith(MockitoExtension.class)
 public class AdjustChargeByChargeExternalIdCommandStrategyTest {
 
     /**
@@ -111,12 +113,12 @@ public class AdjustChargeByChargeExternalIdCommandStrategyTest {
     private BatchRequest getBatchRequest(final String loanExternalId, final String chargeExternalId, final String chargeCommand) {
 
         final BatchRequest br = new BatchRequest();
-        String relativeUrl = String.format("loans/external-id/%s/charges/external-id/%s", loanExternalId, chargeExternalId);
+        String relativeUrl = "loans/external-id/%s/charges/external-id/%s".formatted(loanExternalId, chargeExternalId);
 
         br.setRequestId(Long.valueOf(RandomStringUtils.randomNumeric(5)));
         br.setRelativeUrl(relativeUrl);
         if (StringUtils.isNotBlank(chargeCommand)) {
-            br.setRelativeUrl(br.getRelativeUrl() + String.format("?command=%s", chargeCommand));
+            br.setRelativeUrl(br.getRelativeUrl() + "?command=%s".formatted(chargeCommand));
         }
         br.setMethod(HttpMethod.POST);
         br.setReference(Long.valueOf(RandomStringUtils.randomNumeric(5)));
@@ -151,7 +153,6 @@ public class AdjustChargeByChargeExternalIdCommandStrategyTest {
          * Constructor.
          */
         TestContext() {
-            MockitoAnnotations.openMocks(this);
             subjectToTest = new AdjustChargeByChargeExternalIdCommandStrategy(loanChargesApiResource);
         }
     }
