@@ -28,14 +28,16 @@ import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.fineract.batch.domain.BatchRequest;
 import org.apache.fineract.batch.domain.BatchResponse;
 import org.apache.fineract.infrastructure.dataqueries.api.DatatablesApiResource;
-import org.apache.http.HttpStatus;
+import org.apache.hc.core5.http.HttpStatus;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
  * Test class for {@link CreateDatatableEntryCommandStrategy}.
  */
+@ExtendWith(MockitoExtension.class)
 public class CreateDatatableEntryCommandStrategyTest {
 
     /**
@@ -76,7 +78,7 @@ public class CreateDatatableEntryCommandStrategyTest {
     private BatchRequest getBatchRequest(final String datatableName, final Long loanId) {
 
         final BatchRequest br = new BatchRequest();
-        String relativeUrl = String.format("datatables/%s/%s", datatableName, loanId);
+        String relativeUrl = "datatables/%s/%s".formatted(datatableName, loanId);
 
         br.setRequestId(Long.valueOf(RandomStringUtils.randomNumeric(5)));
         br.setRelativeUrl(relativeUrl);
@@ -113,7 +115,6 @@ public class CreateDatatableEntryCommandStrategyTest {
          */
 
         TestContext() {
-            MockitoAnnotations.openMocks(this);
             subjectToTest = new CreateDatatableEntryCommandStrategy(datatablesApiResource);
         }
     }
