@@ -34,18 +34,20 @@ import org.apache.fineract.batch.domain.BatchRequest;
 import org.apache.fineract.batch.domain.BatchResponse;
 import org.apache.fineract.infrastructure.core.api.MutableUriInfo;
 import org.apache.fineract.infrastructure.dataqueries.api.DatatablesApiResource;
-import org.apache.http.HttpStatus;
+import org.apache.hc.core5.http.HttpStatus;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
  * Tests {GetDatatableEntryByAppTableIdCommandStrategy}.
  */
+@ExtendWith(MockitoExtension.class)
 public class GetDatatableEntryByAppTableIdCommandStrategyTest {
 
     /**
@@ -107,7 +109,7 @@ public class GetDatatableEntryByAppTableIdCommandStrategyTest {
      */
     private BatchRequest getBatchRequest(final Long loanId, final String queryParameter, final String datatableName) {
         final BatchRequest br = new BatchRequest();
-        String relativeUrl = String.format("datatables/%s/%s", datatableName, loanId);
+        String relativeUrl = "datatables/%s/%s".formatted(datatableName, loanId);
         if (queryParameter != null) {
             relativeUrl = relativeUrl + "?" + queryParameter;
         }
@@ -153,7 +155,6 @@ public class GetDatatableEntryByAppTableIdCommandStrategyTest {
          * Constructor.
          */
         private TestContext() {
-            MockitoAnnotations.openMocks(this);
             subjectToTest = new GetDatatableEntryByAppTableIdCommandStrategy(dataTableApiResource);
         }
     }
