@@ -33,17 +33,19 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.fineract.batch.domain.BatchRequest;
 import org.apache.fineract.batch.domain.BatchResponse;
 import org.apache.fineract.portfolio.loanaccount.api.LoansApiResource;
-import org.apache.http.HttpStatus;
+import org.apache.hc.core5.http.HttpStatus;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
  * Test class for {@link LoanStateTransistionsByExternalIdCommandStrategy}.
  */
+@ExtendWith(MockitoExtension.class)
 public class LoanStateTransistionsByExternalIdCommandStrategyTest {
 
     /**
@@ -123,12 +125,12 @@ public class LoanStateTransistionsByExternalIdCommandStrategyTest {
     private BatchRequest getBatchRequest(final String loanExternalId, final String chargeCommand) {
 
         final BatchRequest br = new BatchRequest();
-        String relativeUrl = String.format("loans/external-id/%s", loanExternalId);
+        String relativeUrl = "loans/external-id/%s".formatted(loanExternalId);
 
         br.setRequestId(Long.valueOf(RandomStringUtils.randomNumeric(5)));
         br.setRelativeUrl(relativeUrl);
         if (StringUtils.isNotBlank(chargeCommand)) {
-            br.setRelativeUrl(br.getRelativeUrl() + String.format("?command=%s", chargeCommand));
+            br.setRelativeUrl(br.getRelativeUrl() + "?command=%s".formatted(chargeCommand));
         }
         br.setMethod(HttpMethod.POST);
         br.setReference(Long.valueOf(RandomStringUtils.randomNumeric(5)));
@@ -163,7 +165,6 @@ public class LoanStateTransistionsByExternalIdCommandStrategyTest {
          * Constructor.
          */
         TestContext() {
-            MockitoAnnotations.openMocks(this);
             subjectToTest = new LoanStateTransistionsByExternalIdCommandStrategy(loansApiResource);
         }
     }
