@@ -31,16 +31,18 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.fineract.batch.domain.BatchRequest;
 import org.apache.fineract.batch.domain.BatchResponse;
 import org.apache.fineract.portfolio.loanaccount.api.LoansApiResource;
-import org.apache.http.HttpStatus;
+import org.apache.hc.core5.http.HttpStatus;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
  * Test class for {@link ModifyLoanApplicationCommandStrategy}
  */
+@ExtendWith(MockitoExtension.class)
 public class ModifyLoanApplicationCommandStrategyTest {
 
     /**
@@ -88,7 +90,7 @@ public class ModifyLoanApplicationCommandStrategyTest {
     private BatchRequest getBatchRequest(final Long loanId, final String queryParameter) {
         final BatchRequest batchRequest = new BatchRequest();
 
-        String relativeUrl = String.format("loans/%s", loanId);
+        String relativeUrl = "loans/%s".formatted(loanId);
 
         if (StringUtils.isNotBlank(queryParameter)) {
             relativeUrl = relativeUrl + "?command=" + queryParameter;
@@ -128,7 +130,6 @@ public class ModifyLoanApplicationCommandStrategyTest {
          * Constructor
          */
         TestContext() {
-            MockitoAnnotations.openMocks(this);
             testSubject = new ModifyLoanApplicationCommandStrategy(loansApiResource);
         }
     }
